tests/diag/unknown-prop.expected
tests/diag/unknown-prop.wisp:3:5: error: unknown widget property 'wdith'
      wdith = 100;
      ^
  help: did you mean 'width'?
