tests/diag/unknown-prop.wisp
surface bar {
  widget clock {
    wdith = 100;
  }
}
